src-errormsg/E20-ListOpConfusion/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E20-ListOpConfusion/Plinth.hs:17:22: error: [GHC-25897]
    • Couldn't match expected type ‘a’ with actual type ‘List a’
      ‘a’ is a rigid type variable bound by
        the type signature for:
          prepend :: forall a. List a -> List a -> List a
        at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E20-ListOpConfusion/Plinth.hs:16:1-37
    • In the first argument of ‘Cons’, namely ‘xs’
      In the expression: Cons xs ys
      In an equation for ‘prepend’: prepend xs ys = Cons xs ys
    • Relevant bindings include
        ys :: List a
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E20-ListOpConfusion/Plinth.hs:17:12)
        xs :: List a
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E20-ListOpConfusion/Plinth.hs:17:9)
        prepend :: List a -> List a -> List a
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E20-ListOpConfusion/Plinth.hs:17:1)
   |
17 | prepend xs ys = Cons xs ys
   |                      ^^
